--- a/DesenvolvementeHome.html
+++ b/DesenvolvementeHome.html
@@ -5,10 +5,10 @@
 		<meta name="viewport" content="width=device-width">
 		<title>DesenvolveMente</title>
 
-		<link rel="stylesheet" href="Estilos gerais/reset.css">
-		<link rel="stylesheet" href="Estilos gerais/header.css">
-		<link rel="stylesheet" href="Estilos gerais/home.css">
-		<link rel="stylesheet" href="Estilos gerais/footer.css">
+		<link rel="stylesheet" href="Estilos-gerais/reset.css">
+		<link rel="stylesheet" href="Estilos-gerais/header.css">
+		<link rel="stylesheet" href="Estilos-gerais/home.css">
+		<link rel="stylesheet" href="Estilos-gerais/footer.css">
 	</head>
 	<body>
 
