adicionando a imagem do logo do instagram

--- a/DesenvolvementeHome.html
+++ b/DesenvolvementeHome.html
@@ -46,7 +46,7 @@
 					<div class="dadosFooter">
 						<p>Empresarial Eco Business Center</p>
 						<p>R. Antônio Rabelo Júnior, 161 - Miramar, João Pessoa - PB - CEP: 58032-090</p>
-						<a href="https://www.instagram.com/desenvolvemente_psic/"><img src="/Users/Ighor/Desktop/Site%20da%20Clínica/instagram.png" class="instagram"></a>
+						<a href="https://www.instagram.com/desenvolvemente_psic/"><img src="instagram.png" class="instagram"></a>
 					</div>
 				</div>
 
