Revert "mudando o nome da clínica"
This reverts commit 8343faece26ee6f137ec12d4f77173db498f627c.

--- a/DesenvolvementeHome.html
+++ b/DesenvolvementeHome.html
@@ -17,7 +17,7 @@
 			<div class="preCabecalho">
 				<div class="left">
 				
-					<h1 class="nomeClinica">Desenvolve.Mente</h1>
+					<h1 class="nomeClinica">DesenvolveMente</h1>
 					<h2 class="subTituloClinica">Clínica Psicológica</h2>
 				</div>
 				<div class="right">
