adicionando a div e classe para conter o logo do instagram

--- a/DesenvolvementeHome.html
+++ b/DesenvolvementeHome.html
@@ -60,7 +60,9 @@
 					<div class="dadosFooter">
 						<p>Empresarial Eco Business Center</p>
 						<p>R. Antônio Rabelo Júnior, 161 - Miramar, João Pessoa - PB - CEP: 58032-090</p>
-						<a href="https://www.instagram.com/desenvolvemente_psic/"><img src="instagram.png" class="instagram"></a>
+						<div class="espacoFoto">
+							<a href="https://www.instagram.com/desenvolvemente_psic/"><img src="instagram.png" class="instagram"></a>
+						</div>
 					</div>
 				</div>
 
