--- a/DesenvolvementeHome.html
+++ b/DesenvolvementeHome.html
@@ -37,7 +37,8 @@
 
 			<div class="corpo">
 				<h3 class="conveniosTitulo">Convênios</h3>
-					<ul class="espacoConvenio">
+				<div class="areaDosConvenios">
+					<ul class="navegacaoConvenios">
 						<li><input type="submit" value="Afrafep" class="conveniosLista"></li>
 						<li><input type="submit" value="Bradesco Saúde" class="conveniosLista"></li>
 						<li><input type="submit" value="CAMED" class="conveniosLista"></li>
@@ -48,6 +49,7 @@
 						<li><input type="submit" value="Saúde Caixa" class="conveniosLista"></li>
 						<li><input type="submit" value="TRE" class="conveniosLista"></li>
 					</ul>
+				</div>	
 				<div class="mapa">
 					<iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15836.269428753785!2d-34.8372746!3d-7.1181931!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xa8670ee92d4fdb44!2sEco%20Business%20Center!5e0!3m2!1spt-BR!2sbr!4v1634881302709!5m2!1spt-BR!2sbr" width="600" height="600" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
 				</div>
