--- a/DesenvolvementeHome.html
+++ b/DesenvolvementeHome.html
@@ -43,7 +43,7 @@
 						<li><input type="submit" value="Bradesco Saúde" class="conveniosLista"></li>
 						<li><input type="submit" value="CAMED" class="conveniosLista"></li>
 						<li><input type="submit" value="CASSI" class="conveniosLista"></li>
-						<li><input type="submit" value="EFUNSEC" class="conveniosLista"></li>
+						<li><input type="submit" value="FUNSEC" class="conveniosLista"></li>
 						<li><input type="submit" value="Ministério Público" class="conveniosLista"></li>
 						<li><input type="submit" value="Polícia Federal" class="conveniosLista"></li>
 						<li><input type="submit" value="Saúde Caixa" class="conveniosLista"></li>
