--- a/DesenvolvementeHome.html
+++ b/DesenvolvementeHome.html
@@ -17,6 +17,7 @@
 			<div class="preCabecalho">
 				<div class="left">
 				
+					<img src="Logo.png" class="logoHeader">
 					<h1 class="nomeClinica">DesenvolveMente</h1>
 					<h2 class="subTituloClinica">Clínica Psicológica</h2>
 				</div>
