adicionando descrição das imágens para acessibilidade

--- a/DesenvolvementeHome.html
+++ b/DesenvolvementeHome.html
@@ -17,7 +17,7 @@
 			<div class="preCabecalho">
 				<div class="left">
 				
-					<img src="Logo.png" class="logoHeader">
+					<img src="Logo.png" class="logoHeader" alt="Logo da clínica Desenvolvemente no início da página">
 				</div>
 				<div class="right">
 					<nav>
@@ -86,7 +86,7 @@
 						<p>Empresarial Eco Business Center</p>
 						<p>R. Antônio Rabelo Júnior, 161 - Miramar, João Pessoa - PB - CEP: 58032-090</p>
 						<div class="espacoFoto">
-							<a href="https://www.instagram.com/desenvolvemente_psic/"><img src="instagram.png" class="instagram"></a>
+							<a href="https://www.instagram.com/desenvolvemente_psic/"><img src="instagram.png" class="instagram" alt="Logo/link clicável para perfil no instagram"></a>
 						</div>
 					</div>
 				</div>
