adicionando placeholders no questionário

--- a/DesenvolvementeHome.html
+++ b/DesenvolvementeHome.html
@@ -56,10 +56,10 @@
 							<input type="text" id="identificacao" class="input-escrito" required>
 
 							<label for="email">E-mail</label>
-							<input type="text" id="email" class="input-escrito" requiered>
+							<input type="text" id="email" class="input-escrito" requiered placeholder="Ex: exemplo@domino.com">
 
 							<label for="telefone">Telefone</label>
-							<input type="tel" id="telefone" class="input-escrito" required>
+							<input type="tel" id="telefone" class="input-escrito" required placeholder="Ex: (XX)XXXXX-XXXX">
 
 							<label for="mensagem">Mensagem</label>
 							<textarea cols="30em" rows="10em" class="input-escrito" required></textarea>
