--- a/DesenvolvementeHome.html
+++ b/DesenvolvementeHome.html
@@ -35,6 +35,17 @@
 		<main>
 
 			<div class="corpo">
+				<div class="descricao">
+					<div class="descricaoLeft">
+						<img src="entrada.jpeg" class="descricaoImagem">
+						
+					</div>
+					<div class="descricaoRight">
+						<h2 class="descricaoTitulo">Sobre a clínica</h2>
+						<p class="descricaoTexto">A clínica desenvolvemente iniciou suas atividades....</p>
+					</div>
+					
+				</div>
 				<h3 class="conveniosTitulo">Convênios</h3>
 				<div class="areaDosConvenios">
 					<ul class="navegacaoConvenios">
