adicionando título e telefone nas áreas de contato

--- a/DesenvolvementeHome.html
+++ b/DesenvolvementeHome.html
@@ -55,6 +55,7 @@
 					</ul>
 				</div>
 				<div class="areaContato">
+					<h2 class="contatoTitulo">Contato</h2>
 					<div class="contato-left">
 						<form>
 							<label for="identificacao">Nome e Sobrenome</label>
@@ -74,6 +75,8 @@
 					</div>	
 					<div class="contato-right">
 						<div class="endereço">
+							<a href="https://www.instagram.com/desenvolvemente_psic/">Instagram: @desenvolvemente_psic</a>
+							<p><strong>Telefone: (83) 98623-5403</strong></p>
 							<p><em>Endereço: R. Antônio Rabelo Júnior, 161 - Miramar, João Pessoa - PB - CEP: 58032-090</em></p>
 						</div>
 						<div class="mapa">
@@ -90,6 +93,7 @@
 					<div class="dadosFooter">
 						<p>Empresarial Eco Business Center</p>
 						<p>R. Antônio Rabelo Júnior, 161 - Miramar, João Pessoa - PB - CEP: 58032-090</p>
+						<p>Telefone: (83) 98623-5403</p>
 						<div class="espacoFoto">
 							<a href="https://www.instagram.com/desenvolvemente_psic/"><img src="instagram.png" class="instagram" alt="Logo/link clicável para perfil no instagram"></a>
 						</div>
