--- a/DesenvolvementeHome.html
+++ b/DesenvolvementeHome.html
@@ -24,7 +24,7 @@
 						<ul>
 							<li><a href="">Início</a></li>
 							<li><a href="">Convênios</a></li>
-							<li><a href="">Profissionais</a></li>
+							<li><a href="Profissionais.html">Profissionais</a></li>
 						</ul>	
 					</nav>
 				</div>
