--- a/Profissionais.html
+++ b/Profissionais.html
@@ -21,7 +21,7 @@
 				<div class="right">
 					<nav>
 						<ul>
-							<li><a href="">Início</a></li>
+							<li><a href="DesenvolvementeHome.html">Início</a></li>
 							<li><a href="">Convênios</a></li>
 							<li><a href="">Profissionais</a></li>
 						</ul>	
