--- a/Profissionais.html
+++ b/Profissionais.html
@@ -1,61 +1,62 @@
 <!DOCTYPE html>
-<html>
-<head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>DesenvolveMente</title>
+<html lang="pt-br">
+	<head>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<title>DesenvolveMente</title>
 
-	<link rel="stylesheet" href="Estilos-gerais/reset.css">
-	<link rel="stylesheet" href="Estilos-gerais/header.css">
-	<link rel="stylesheet" href="Estilos-gerais/profissionais.css">
-	<link rel="stylesheet" href="Estilos-gerais/footer.css">
-</head>
-<body>
-	<header>
+		<link rel="stylesheet" href="Estilos-gerais/reset.css">
+		<link rel="stylesheet" href="Estilos-gerais/header.css">
+		<link rel="stylesheet" href="Estilos-gerais/profissionais.css">
+		<link rel="stylesheet" href="Estilos-gerais/footer.css">
+	</head>
+	<body>
 		
-		<div class="preCabecalho">
-				<div class="left">
-				
-					<img src="Logo.png" class="logoHeader" alt="Logo da clínica Desenvolvemente no início da página">
+		<header>
+			
+			<div class="preCabecalho">
+					<div class="left">
+					
+						<img src="Logo.png" class="logoHeader" alt="Logo da clínica Desenvolvemente no início da página">
+					</div>
+					<div class="right">
+						<nav>
+							<ul>
+								<li><a href="DesenvolvementeHome.html">Início</a></li>
+								<li><a href="">Convênios</a></li>
+								<li><a href="">Profissionais</a></li>
+							</ul>	
+						</nav>
+					</div>
 				</div>
-				<div class="right">
-					<nav>
-						<ul>
-							<li><a href="DesenvolvementeHome.html">Início</a></li>
-							<li><a href="">Convênios</a></li>
-							<li><a href="">Profissionais</a></li>
-						</ul>	
-					</nav>
-				</div>
-			</div>
 
-	</header>
+		</header>
 
-	<main>
-		
-	</main>
+		<main>
+			
+		</main>
 
-	<footer>
-		<div class="preRodape">
-				<div class="right">
-					<div class="dadosFooter">
-						<p>Empresarial Eco Business Center</p>
-						<p>R. Antônio Rabelo Júnior, 161 - Miramar, João Pessoa - PB - CEP: 58032-090</p>
-						<p>Telefone: (83) 98623-5403</p>
-						<div class="espacoFoto">
-							<a href="https://www.instagram.com/desenvolvemente_psic/"><img src="instagram.png" class="instagram" alt="Logo/link clicável para perfil no instagram"></a>
+		<footer>
+			<div class="preRodape">
+					<div class="right">
+						<div class="dadosFooter">
+							<p>Empresarial Eco Business Center</p>
+							<p>R. Antônio Rabelo Júnior, 161 - Miramar, João Pessoa - PB - CEP: 58032-090</p>
+							<p>Telefone: (83) 98623-5403</p>
+							<div class="espacoFoto">
+								<a href="https://www.instagram.com/desenvolvemente_psic/"><img src="instagram.png" class="instagram" alt="Logo/link clicável para perfil no instagram"></a>
+							</div>
 						</div>
 					</div>
-				</div>
 
-				<div class="left">
-					<div class="about">
-						<p><em>A clinica desenvolvemente busca se adequar as necessidades dos clientes, com profissionais qualificados.</em></p>
+					<div class="left">
+						<div class="about">
+							<p><em>A clinica desenvolvemente busca se adequar as necessidades dos clientes, com profissionais qualificados.</em></p>
+						</div>
 					</div>
+				<img src="Logo Branco.png" class="logoFooter">
 				</div>
-			<img src="Logo Branco.png" class="logoFooter">
-			</div>
-	</footer>
+		</footer>
 
-</body>
+	</body>
 </html>
